     + add a "SEE ALSO" section in manual page. (Closes: #458296)
  * dch:
     + add a --bin-nmu option for binNMUs. (Closes: #458496)
     + add a -s/--security option for Security Team uploads inspired by
       Ubuntu's.
  * debdiff: make diff output p1-compatible (for native packages or when
    interdiff is not available). Thanks dAniel hAhler for the patch.
    (Closes: #456223)
  * Changes pulled from Ubuntu's diff:
     + debian/control:
        - suggest wget|curl instead of wget
        - suggest lsb-release
     + debuild: preserve DEBEMAIL environment variable.

  [ Adam D. Barratt ]
  * who-uploads: Actually check debian-keyring.pgp by default rather
    than .gpg twice. Thanks to Philipp Kern for pointing the issue out
    (Closes: #456209)
  * who-uploads: Check debian-maintainers.gpg by default. Thanks to
    Philipp Kern for the suggestion (Closes: #456208)
  * debian/control, README: Add debian-maintainers to the suggested
    package list
  * debchange: Add a configuration file option to allow overriding the
    default setting of -t / --mainttrailer (Closes: #454254, #453644)
  * debchange: Correctly handle using an empty changelog entry to switch
    the distribution to UNRELEASED when using the changelog heuristic
    (Closes: #453690)

  [ Luk Claes ]
  * chdist: Add bash_completion script for chdist (Closes: #457842)
  * chdist: Added improvements and fixed bugs. Thanks to Raphaël Pinson
    (Closes: #457841)

 -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Wed, 02 Jan 2008 04:06:09 +0100

devscripts (2.10.11) unstable; urgency=low

  [ Adam D. Barratt ]
  * uscan: Correctly parse HTMLised FTP directory listings. Thanks to
    Vaclav Ovsik for the patch (Closes: #448636)
  * desktop2menu: New script to generate skeleton menu files from
    freedesktop.org .desktop files. Thanks to Sune Vuorela (Closes: #448730)
  * debchange: Default to using -t / --mainttrailer when using the "changelog"