@@ -26,6 +26,8 @@ devscripts (2.10.12) UNRELEASED; urgency=low
   * debdiff: make diff output p1-compatible (for native packages or when
     interdiff is not available). Thanks dAniel hAhler for the patch.
     (Closes: #456223)
+  * mass-bug: add --user and --usertags options to avoid their wrapping.
+    (Closes: #429479)
   * Changes pulled from Ubuntu's diff:
      + debian/control:
         - suggest wget|curl instead of wget
@@ -51,7 +53,7 @@ devscripts (2.10.12) UNRELEASED; urgency=low
   * chdist: Added improvements and fixed bugs. Thanks to Raphaël Pinson
     (Closes: #457841)
 
- -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Wed, 02 Jan 2008 04:06:09 +0100
+ -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Wed, 02 Jan 2008 04:29:09 +0100
 
 devscripts (2.10.11) unstable; urgency=low
 
